Project

General

Profile

Actions

Bug #39972

closed

librados 'buffer::create' and related functions are not exported in C++ API

Added by Jason Dillaman almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Currently, there is no way to create any 'buffer::raw' objects since they are no longer exposed (since Nautilus) via the public API. Move the inline "v14_2_0" namespace up to encompass those methods.


Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #40274: nautilus: librados 'buffer::create' and related functions are not exported in C++ APIResolvedPrashant DActions
Actions #1

Updated by Jason Dillaman almost 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 28167
Actions #2

Updated by Kefu Chai almost 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40274: nautilus: librados 'buffer::create' and related functions are not exported in C++ API added
Actions #4

Updated by Greg Farnum over 4 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF