librados: move buffer free functions to inline namespace

'buffer::raw' factory methods and similar methods are now
wrapped in the 'v14_2_0' inline namespace for export via the
public librados API.

Fixes: http://tracker.ceph.com/issues/39972
Signed-off-by: Jason Dillaman <dillaman@redhat.com>